--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="styles.css">
     <title>Instagram</title>
 </head>
 <body>
